# CppGame

./: .gitmodules  CMakeLists.txt  hello.cpp  main.cpp
include/: Object.h  Sprite.h  audio.h  geometry.h  graphics.h  logic.h  main.h  text.h
lib/: OpenAL32.lib  alut.lib
src/: Image.cpp  Object.cpp  Sprite.cpp  audio.cpp  geometry.cpp  graphics.cpp  lineal_alg.cpp  logic.cpp  text.cpp
